apps/nginx/overlays/prod/replica-patch.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx

spec:
  replicas: 5
